gobmkida/c3/neighbor_of_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/neighbor_of_string/src/engine/board.c:2898:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[pos] != v2 || ( result = 1, string[239].neighborlist[pos + 160] != string_number[str]) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/neighbor_of_string/src/engine/board.c:2900:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[pos] != v2 || ( result = 1, string[239].neighborlist[pos + 141] != string_number[str]) ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/neighbor_of_string/src/obj/1/board.o] Error 1
